<b>Version 2.2.7:</b><br/><br/>
    &#8226; Major rewrite of a lot of the background in preparation for some cool new stuff to come<br/>
</br><br/>

<b>Version 2.2.6:</b><br/><br/>
    &#8226; Fixes for the pull to refresh getting stuck<br/>
    &#8226; Alert when viewing protected accounts<br/>
    &#8226; Other random reported bug fixes<br/>
</br><br/>

<b>Version 2.2.5:</b><br/><br/>
    &#8226; Google Now style pull-to-refresh<br/>
    &#8226; Refresh different pages at once<br/>
    &#8226; Choice of which page to open a tweet to (under Timeline Settings)<br/>
    &#8226; Image loading fixes<br/>
    &#8226; Cashtag highlighting and searching<br/>
    &#8226; Settings cleanup<br/>
    &#8226; Fix some problems uploading profile pic and banner<br/>
    &#8226; Lots of small reported bug fixes<br/>
    &#8226; Some more crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.2.3:</b><br/><br/>
    &#8226; Small bug fixes<br/>
</br><br/>

<b>Version 2.2.2:</b><br/><br/>
    &#8226; Image rotation fixes when tweeting<br/>
    &#8226; Rotate the screen in the photo viewer<br/>
    &#8226; Small vibrate on tweet sent<br/>
    &#8226; Notification fixes<br/>
    &#8226; Updated translations<br/>
</br><br/>

<b>Version 2.2.1:</b><br/><br/>
    &#8226; Better notification when replying to tweet<br/>
    &#8226; Only pre-cache over wifi option<br/>
    &#8226; Bug fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.2.0:</b><br/><br/>
    &#8226; [New] Full screen layout option<br/>
    &#8226; [New] Pre-cache images option<br/>
    &#8226; [New] Draft system for multiple drafts<br/>
    &#8226; [New] Plain text browser option<br/>
    &#8226; [New] Tweet multiple images<br/>
    &#8226; [New] Pictures in DM's with TwitPic<br/>
    &#8226; [New] Live streaming mentions<br/>
    &#8226; [New] Force overflow in some places<br/><br/>
    &#8226; [Improved] Notification while tweeting<br/>