@@ -1,5 +1,6 @@
 <b>Version 2.2.7:</b><br/><br/>
     &#8226; Major rewrite of a lot of the background in preparation for some cool new stuff to come<br/>
+    &#8226; Immediate switch to night mode<br/>
 </br><br/>
 
 <b>Version 2.2.6:</b><br/><br/>
